--- a/cms/templates/register.html
+++ b/cms/templates/register.html
@@ -1,8 +1,8 @@
 <%inherit file="base.html" />
 <%def name="online_help_token()"><% return "register" %></%def>
 <%!
+from django.conf import settings
 from django.utils.translation import ugettext as _
-from django.urls import reverse
 %>
 
 <%block name="title">${_("Sign Up")}</%block>
@@ -14,7 +14,7 @@ from django.urls import reverse
   <section class="content">
     <header>
       <h1 class="title title-1">${_("Sign Up for {studio_name}").format(studio_name=settings.STUDIO_NAME)}</h1>
-      <a href="${reverse('login')}" class="action action-signin">${_("Already have a {studio_name} Account? Sign in").format(studio_name=settings.STUDIO_SHORT_NAME)}</a>
+      <a href="${settings.FRONTEND_LOGIN_URL}" class="action action-signin">${_("Already have a {studio_name} Account? Sign in").format(studio_name=settings.STUDIO_SHORT_NAME)}</a>
     </header>
 
     <p class="introduction">${_("Ready to start creating online courses? Sign up below and start creating your first {platform_name} course today.").format(platform_name=settings.PLATFORM_NAME)}</p>
