--- a/cms/templates/registration/activation_complete.html
+++ b/cms/templates/registration/activation_complete.html
@@ -1,7 +1,7 @@
 <%inherit file="../base.html" />
 <%!
+from django.conf import settings
 from django.utils.translation import ugettext as _
-from django.urls import reverse
 %>
 
 <%namespace name='static' file='../static_content.html'/>
@@ -25,7 +25,7 @@ from django.urls import reverse
       %if user_logged_in:
         ${_("Visit your {link_start}dashboard{link_end} to see your courses.").format(link_start='<a href="/">', link_end='</a>')}
       %else:
-        ${_("You can now {link_start}sign in{link_end}.").format(link_start='<a href="{url}">'.format(url=reverse('login')), link_end='</a>')}
+        ${_("You can now {link_start}sign in{link_end}.").format(link_start='<a href="{url}">'.format(url=settings.FRONTEND_LOGIN_URL, link_end='</a>')}
       %endif
     </p>
   </section>
