More login changes
- Remove DISABLE_STUDIO_SSO_OVER_LMS feature toggle
- Use LOGIN_URL rather than FRONTEND_LOGIN_URL
- Use /sign for redirect in place of /signin_redirect_to_lms
- Remove old studio signin templates
- Remove FRONTEND_LOGOUT_URL from lms/envs/test.py which was initially
documented as only being needed by lettuce tests which no longer exist.

Add note about being blocked on DEPR.

ARCH-1253

--- a/cms/templates/howitworks.html
+++ b/cms/templates/howitworks.html
@@ -165,7 +165,7 @@
         <a href="${reverse('signup')}" class="action action-primary">${_("Sign Up & Start Making Your {platform_name} Course").format(platform_name=settings.PLATFORM_NAME)}</a>
       </li>
       <li class="action-item">
-        <a href="${settings.FRONTEND_LOGIN_URL}" class="action action-secondary">${_("Already have a {studio_name} Account? Sign In").format(studio_name=settings.STUDIO_SHORT_NAME)}</a>
+        <a href="${settings.LOGIN_URL}" class="action action-secondary">${_("Already have a {studio_name} Account? Sign In").format(studio_name=settings.STUDIO_SHORT_NAME)}</a>
       </li>
     </ul>
   </section>
