--- a/cms/templates/registration/activation_complete.html
+++ b/cms/templates/registration/activation_complete.html
@@ -25,7 +25,7 @@ from django.utils.translation import ugettext as _
       %if user_logged_in:
         ${_("Visit your {link_start}dashboard{link_end} to see your courses.").format(link_start='<a href="/">', link_end='</a>')}
       %else:
-        ${_("You can now {link_start}sign in{link_end}.").format(link_start='<a href="{url}">'.format(url=settings.FRONTEND_LOGIN_URL, link_end='</a>')}
+        ${_("You can now {link_start}sign in{link_end}.").format(link_start='<a href="{url}">'.format(url=settings.LOGIN_URL, link_end='</a>')}
       %endif
     </p>
   </section>
